--- a/Project.Rmd
+++ b/Project.Rmd
@@ -16,18 +16,38 @@ library(lubridate)
 
 ##pH Data
 ```{r}
-files <- list.files(path="data", pattern = ".csv", full.names = TRUE)
+files <- list.files(path="raw_data", pattern = ".csv", full.names = TRUE)
 files
 ```
 
 ```{r}
-files_list <- lapply(files, read_csv)
-files_list
+#files_list <- lapply(files, read_csv)
+#files_list
 ```
 
 ##Project Code
 ```{r}
-ph
+chaeto1<-readr::read_csv("raw_data/ph_chaeto_set_1.csv")
+chaeto1
+names(chaeto1)
 ```
+```{r}
+chaeto1<-clean_names(chaeto1)
+chaeto1
+```
+
+
+```{r}
+chaeto1%>%
+  select(-c(date, chn_1_events, time_stamp_utc))%>%
+  rename(p_h_4 = ph_8.6,
+         p_h_5 = ph_7.6,
+         p_h_6 = ph_7.6,
+         p_h_7 = ph_7.6,
+         p_h_8 = ph_8.6,
+         p_h_9 = ph_8.6)
+```
+
+
 ##Questions
 1. 
