chaeto comparison code

--- a/chaeto_comparison.Rmd
+++ b/chaeto_comparison.Rmd
@@ -19,62 +19,50 @@ library(dplyr)
 
 Loading data: 
 ```{r}
-chaeto_1 <- readr::read_csv("raw_data/ph_chaeto_set_1.csv")
+chaeto <- readr::read_csv("new_clean_data/chaeto1_clean.csv")
+```
+
+
+```{r}
+chaeto
 ```
 ```{r}
-chaeto_2 <- readr::read_csv("raw_data/ph_chaeto_set_2.csv")
+chaeto_wide <- chaeto %>%
+  pivot_wider(
+    names_from = "flask",
+    values_from = "ph"
+  )
+chaeto_wide
 ```
 
 ```{r}
-chaeto_1 <- clean_names(chaeto_1)
+ph7_6 <- chaeto_wide%>%
+  select(ph1_7_6, ph2_7_6, ph3_7_6)%>%
+  rowMeans()
 ```
 
 ```{r}
-chaeto_1 <- chaeto_1%>%
-  select(-c(date, chn_1_events, time_stamp_utc))%>%
-  rename(ph1_8_2 = p_h_4,
-         ph1_7_6 = p_h_5,
-         ph2_7_6 = p_h_6,
-         ph3_7_6 = p_h_7,
-         ph2_8_2 = p_h_8,
-         ph3_8_2 = p_h_9)
-```
-```{r}
-chaeto_1
+ph8_2 <- chaeto_wide%>%
+  select(ph1_8_2, ph2_8_2, ph3_8_2)%>%
+  rowMeans()
 ```
 
 ```{r}
-chaeto_1 <- chaeto_1[c(1,3,4,5,2,6,7)]
-```
-```{r}
-chaeto_1
+new_chaeto_wide <- cbind(chaeto_wide, ph7_6, ph8_2)
+new_chaeto_wide
 ```
 
 ```{r}
-chaeto_2 <- clean_names(chaeto_2)
+new_chaeto_long <- new_chaeto_wide%>%
+  select(seconds, ph7_6, ph8_2)%>%
+  pivot_longer(-seconds,
+    names_to = "ph",
+    values_to = "flask"
+  )
+new_chaeto_long
 ```
 ```{r}
-chaeto_2 <- chaeto_2%>%
-  select(-c(date, chn_1_events, time_stamp_utc))%>%
-  rename(ph1_8_2 = p_h_5,
-         ph1_7_6 = p_h_4,
-         ph2_7_6 = p_h_7,
-         ph3_7_6 = p_h_9,
-         ph2_8_2 = p_h_6,
-         ph3_8_2 = p_h_8)
-```
-```{r}
-chaeto_2
-```
-```{r}
-chaeto_2 <- chaeto_2[c(1,2,5,7,3,4,6)]
-```
-
-```{r}
-chaeto_1%>%
-ggplot(aes(x=relative_time, y=ph1_7_6))+geom_line()
-```
-
-```{r}
-
+new_chaeto_long%>%
+  ggplot(aes(x=seconds, y=flask, color=ph))+
+  geom_line()
 ```
